# poem

./: README.md  pyproject.toml
src/poetry_creation_studio/: crew.py  main.py
src/poetry_creation_studio/config/: agents.yaml  tasks.yaml
