[project]
name = "poetry_creation_studio"
version = "0.1.0"
description = "poetry_creation_studio using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.4.1",
]

[project.scripts]
poetry_creation_studio = "poetry_creation_studio.main:run"
run_crew = "poetry_creation_studio.main:run"
train = "poetry_creation_studio.main:train"
replay = "poetry_creation_studio.main:replay"
test = "poetry_creation_studio.main:test"
run_with_trigger = "poetry_creation_studio.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
